--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -32,11 +32,13 @@
 		{% if venue.seeking_talent %}
 		<div class="seeking">
 			<p class="lead">Currently seeking talent</p>
+			{% if venue.seeking_description %}
 			<div class="description">
 				<i class="fas fa-quote-left"></i> {{ venue.seeking_description }} <i class="fas fa-quote-right"></i>
 			</div>
+			{% endif %}
 		</div>
-		{% else %}	
+		{% else %}
 		<p class="not-seeking">
 			<i class="fas fa-moon"></i> Not currently seeking talent
 		</p>
@@ -76,6 +78,6 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
-
+<a href="/venues/{{ venue.id }}/delete"><button class="btn btn-danger btn-lg">Delete</button></a>
 {% endblock %}
 
